Add listener HTML and JS event listener

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Homework - Event Listeners</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
@@ -10,7 +10,11 @@
 </head>
 <body>
 
+    <div class="container">
 
+        <h1 id="headlineOne">Click Me!</h1>
+
+    </div>
 
     <script src="js/main.js"></script>
 </body>
