--- a/index.html
+++ b/index.html
@@ -12,7 +12,31 @@
 
     <div class="container">
 
+        <form action="" method="post" id="contactform">
 
+            <fieldset id="info">
+
+                <label for="name">First Name</label>
+
+                <input type="text" name="firstname" id="firstname" />
+
+                <label for="name">Last Name</label>
+
+                <input type="text" name="lastname" id="lastname" />
+
+                <label for="email">Email</label>
+
+                <input type="email" name="email" id="email" />
+
+            </fieldset>
+
+            <label for="comments">Message</label>
+
+            <textarea name="comments" id="message"></textarea>
+
+            <input type="submit" name="submit" id="submit" value="Submit Form" />
+
+        </form>
 
     </div>
 
