Add initial code for form logs

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 
     <div class="container">
 
-        <form action="" method="post" id="contactform">
+        <form class="simpleForm">
 
-            <fieldset id="info">
+            <fieldset>
 
                 <label for="name">First Name:</label>
 
-                <input type="text" name="firstname" class="sameWidth" />
+                <input type="text" name="firstname" class="info" />
 
                 <label for="name">Last Name:</label>
 
-                <input type="text" name="lastname" class="sameWidth" />
+                <input type="text" name="lastname" class="info" />
 
                 <label for="email">Email:</label>
 
-                <input type="email" name="email" class="sameWidth" />
+                <input type="email" name="email" class="info" />
 
                 <label for="comments">Message:</label>
 
-                <textarea name="comments" class="sameWidth"></textarea>
+                <textarea name="comments" class="info"></textarea>
 
                 <input type="submit" name="submit" class="button" value="Submit Form" />
 
