Add custom HTML and add two images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Homework - Event Listeners</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
@@ -10,7 +10,35 @@
 </head>
 <body>
 
+    <div class="container">
 
+        <section>
+
+            <h1>I love Corgis!</h1>
+
+            <p>Corgis are wonderful creatures that live amongst us. In this paragraph, you can learn all about corgis.</p>
+
+            <h2>About</h2>
+
+            <p>The Welsh Corgi (Welsh for "dwarf dog") is a small type of herding dog that originated in Wales. Two distinct breeds are recognized: the Pembroke Welsh Corgi and the Cardigan Welsh Corgi. The Pembroke Welsh Corgi is the more common of the Welsh Corgis.</p>
+
+            <h2>Corgi Activities</h2>
+
+            <p>Corgis often compete in dog agility trials, obedience, showmanship, flyball, tracking, and herding events. Herding instincts and trainability can be measured at noncompetitive herding tests. Cardigan and Pembroke corgis exhibiting basic herding instincts can be trained to compete in herding trials.</p>
+
+            <h2>Click here to learn about Corgi temperaments<h2>
+
+        </section>
+
+        <aside>
+
+            <h3>Cute Corgi Image!</h3>
+
+            <img src="img/cutecorgi.jpg" alt="Cute Corgi" tag="Cute Corgi">
+
+        </aside>
+
+    </div>
 
     <script src="js/main.js"></script>
 </body>
