--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Homework - Event Listeners</title>
     <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet" type="text/css">
 </head>
 <body>
 
     <div class="container">
 
-        <section>
+        <h1>I love Corgis!</h1>
 
-            <h1>I love Corgis!</h1>
+        <section>
 
             <p>Corgis are wonderful creatures that live amongst us. In this paragraph, you can learn all about corgis.</p>
 
@@ -26,7 +29,7 @@
 
             <p>Corgis often compete in dog agility trials, obedience, showmanship, flyball, tracking, and herding events. Herding instincts and trainability can be measured at noncompetitive herding tests. Cardigan and Pembroke corgis exhibiting basic herding instincts can be trained to compete in herding trials.</p>
 
-            <h2>Click here to learn about Corgi temperaments<h2>
+            <h2>Click here to learn about Corgi temperaments</h2>
 
         </section>
 
