--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h1>I love Corgis!</h1>
 
-        <section>
+        <section class="mainContent">
 
             <p>Corgis are wonderful creatures that live amongst us. In this paragraph, you can learn all about corgis.</p>
 
@@ -29,7 +29,7 @@
 
             <p>Corgis often compete in dog agility trials, obedience, showmanship, flyball, tracking, and herding events. Herding instincts and trainability can be measured at noncompetitive herding tests. Cardigan and Pembroke corgis exhibiting basic herding instincts can be trained to compete in herding trials.</p>
 
-            <h2>Click here to learn about Corgi temperaments</h2>
+            <h2 id="headlineTwo">Click here to learn about Corgi temperaments</h2>
 
         </section>
 
