Finalize index and JS code and edit CSS

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 
                 <label for="name">First Name:</label>
 
-                <input type="text" name="firstname" class="info" />
+                <input type="text" name="firstname" id="firstName" />
 
                 <label for="name">Last Name:</label>
 
-                <input type="text" name="lastname" class="info" />
+                <input type="text" name="lastname" class="info" id="lastName" />
 
                 <label for="email">Email:</label>
 
-                <input type="email" name="email" class="info" />
+                <input type="email" name="email" class="info" id="email" />
 
                 <label for="comments">Message:</label>
 
-                <textarea name="comments" class="info"></textarea>
+                <textarea name="comments" id="message"></textarea>
 
-                <input type="submit" name="submit" class="button" value="Submit Form" />
+                <input type="submit" name="submit" class="button" value="Submit" />
 
             </fieldset>
 
