--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
         </section>
 
-        <aside>
+        <aside class="corgiImages">
 
             <h3>Cute Corgi Image!</h3>
 
-            <img src="img/cutecorgi.jpg" alt="Cute Corgi" tag="Cute Corgi">
+            <img src="img/cutecorgi.jpg" alt="Cute Corgi" tag="Cute Corgi" id="cuteCorgi" >
 
         </aside>
 
