--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container">
 
-        <h1>I love Corgis!</h1>
+        <h1 id="headlineOne">I love Corgis!</h1>
 
         <section class="mainContent">
 
